--- a/key.html
+++ b/key.html
@@ -145,6 +145,8 @@
         position: absolute;
         top: 0;
         bottom: 0;
+	left: 0;
+	right: 0;	      
         width: 100%;
       }
          
@@ -225,8 +227,7 @@ map.on('click', function(e) {
 		    <p class="lead">Using data from the New York City Health department and the data retrieval tools from open ny,
 the effects of the Young Lords direct action are clear. After gaining concessions from public health officials for testing, the exponential increase in clinical facilities focused primarily in Harlem and the Bronx brought millions of people closer to accessing Health Care facilities.</p>
 		    </div>
-		    <div id="chart_div" style="width: 900px; height: 500px;"></div>
-				<caption style="text-align:right" style="font-family:Helvetica Neue">Data from <a href="https://data.cityofnewyork.us/Health/NYC-Health-Hospitals-Facilities-2011/ymhw-9cz9">NYC Open Data</a></caption>
+		  
 
 		    		    <br>
 		    <p><h2>Implications</h2></p>
