--- a/key.html
+++ b/key.html
@@ -143,10 +143,7 @@
 }
 	      #map {
         position: absolute;
-        top: 0;
-        bottom: 0;
-	left: 0;
-	right: 0;	      
+       height: 100%;	      
         width: 100%;
       }
          
