--- a/key.html
+++ b/key.html
@@ -187,7 +187,7 @@
 	    <section class="page-section portfolio" id="portfolio">
             <div class="container">
 <br>
-		    <div id='map'></div>
+		    <div id='map' style="width: 900px; height: 500px"></div>
 <script>
 mapboxgl.accessToken = 'pk.eyJ1Ijoicm9kcmk2OTEiLCJhIjoiY2szMGsyYTczMHRqbjNtczF0bDg2Zm83YSJ9.91pXtlBbZG8dWo9-hnz04w';
 var map = new mapboxgl.Map({
