--- a/key.html
+++ b/key.html
@@ -61,7 +61,7 @@
         };
       }
     </script>
-  <title>Young Lords' Bronx</title>
+  <title>Young Lords' Bronx!</title>
   
 <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
 <script src="https://api.mapbox.com/mapbox-gl-js/v1.7.0/mapbox-gl.js"></script>
@@ -223,6 +223,22 @@ map.on('click', function(e) {
             <section class="page-section portfolio" id="portfolio">
             <div class="container">
 <br>
+		    <br>
+		    <br>
+		    <br>
+		    <br>
+		    <br>
+		    <br>
+		    <br>
+		    <br>
+		    <br>
+		    <br>
+		    <br>
+		    <br>
+		    <br>
+		    <br>
+		    <br>
+		    
 		    <div class="container">
 		    <br>
 		    <p><h2>Over Time</h2></p>
