--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>About the Young Lords</title>
+    <title>Healthy Visuals</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -28,6 +28,112 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+  <script type="text/javascript">
+    google.charts.load('current', {'packages':['corechart']});
+    google.charts.setOnLoadCallback(drawChart1);
+    google.charts.setOnLoadCallback(drawChart2);
+    google.charts.setOnLoadCallback(drawChart3);
+    google.charts.setOnLoadCallback(drawChart4);
+    function drawChart1() {
+      var data = google.visualization.arrayToDataTable([
+        ['Year', 'Male', 'Female'],
+        ['2010',  14,      16.2],
+        ['2011',  13.6,      16.3],
+        ['2012',  13.6,       16.3],
+        ['2013',  13.2,      16.3],
+        ['2014',  13.4,      16.1],
+        ['2015',  12.2,      14.8],
+        ['2016', 11.3,      14],
+        ['2017', 11,      13.6],
+        ['2018', 10.6,      12.9]
+      ]);
+
+      var options = {
+        title: 'Proportion of People Living in Poverty, by Sex',
+        curveType: 'function',
+        legend: { position: 'bottom' }
+      };
+
+      var chart = new google.visualization.LineChart(document.getElementById('chart_1'));
+
+      chart.draw(data, options);
+    }
+
+    function drawChart2() {
+      var data = google.visualization.arrayToDataTable([
+        ['Year', 'Hispanic or Latinx', 'Mexican American', 'Black or African American, not Hispanic or Latinx', 'White, not Hispanic or Latinx'],
+        ['2010',  26.6,	28.6,	27.3,	9.9],
+        ['2011',  25.3,	27.1,	27.3,	9.8],
+        ['2012',  25.6,	26.7,	27,	9.7],
+        ['2013',  24.7,	25.8,	24.8,	10],
+        ['2014',  23.6,	25.1,	26.1,	10.1],
+        ['2015',  21.4,	22.4,	24.2,	9.1],
+        ['2016', 19.4,	20.3,	22.1,	8.8],
+        ['2017', 18.3,	18.6,	21,	8.7],
+        ['2018', 17.6,	18.5,	21.1,	8.1]
+      ]);
+
+      var options = {
+        title: 'Proportion of People Living in Poverty, by Race/Ethnicity',
+        curveType: 'function',
+        legend: { position: 'bottom' }
+      };
+
+      var chart = new google.visualization.LineChart(document.getElementById('chart_2'));
+
+      chart.draw(data, options);
+    }
+    function drawChart3() {
+      var data = google.visualization.arrayToDataTable([
+        ['Year', 'Male', 'Female'],
+        ['2010',  79.7,	83.9],
+        ['2011',  81.2,	84.4],
+        ['2012',  81.5,	84.6],
+        ['2013',  81.9,	84.8],
+        ['2014',  85.3,	88.1],
+        ['2015',  88,	90.7],
+        ['2016', 88.4,	91],
+        ['2017', 88.1,	90.5],
+        ['2018', 87.9,	90.1]
+      ]);
+
+      var options = {
+        title: 'Access to Healthcare through Insurance, by Sex',
+        curveType: 'function',
+        legend: { position: 'bottom' }
+      };
+
+      var chart = new google.visualization.LineChart(document.getElementById('chart_3'));
+
+      chart.draw(data, options);
+    }
+          function drawChart4() {
+      var data = google.visualization.arrayToDataTable([
+       ['Year', 'American Indian or Alaska Native only', 'Asian only', 'Native Hawaiian or Other Pacific Islander only', 'Black or African American only', 'White only', '2 or more races', 'Hispanic or Latino', 'Not Hispanic or Latino', 'Black or African American only, not Hispanic or Latino', 'White only, not Hispanic or Latino'],
+       ['2010',	56,	    82.9,	75.6,	79.4,	82.4,	84.2,	68,	    84.8,	79.3,	86.3],			
+       ['2011',	65.8,	83.5,	77.3,	81,	    83.3,	84,	    68.9,	85.8,	81.2,	87.1],			
+       ['2012',	73,	    83.2,	87.9,	82,	    83.3,	85.5,	69.6,	86.1,	82.2,	87.3],			
+       ['2013',	70.6,	85.8,	89.3,	81.1,	83.7,	84.7,	69.3,	86.6,	81.2,	87.8],			
+       ['2014',	71.7,	89.2,	87.8,	86.3,	86.7,	89.9,	74.5,	89.5,	86.5,	90.3],			
+       ['2015',	78.6,	92.5,	87.4,	88.7,	89.3,	90.5,	78.9,	91.8,	88.8,	92.5],			
+       ['2016',	74.6,	93.5,	90.7,	88.5,	89.8,	91,	    80.4,	91.9,	88.7,	92.7],			
+       ['2017',	73.1,	92.6,	88.8,	88.8,	89.4,	89.6,	79.4,	91.8,	88.9,	92.6],			
+       ['2018',	71.4,	92.6,	90.6,	87.9,	89.1,	89.9,	79.9,	91.3,	87.9,	92.2]			
+      ]);
+
+      var options = {
+        title: 'Access to Healthcare through Insurance, by Race',
+        curveType: 'function',
+        legend: { position: 'bottom' }
+      };
+
+      var chart = new google.visualization.LineChart(document.getElementById('chart_4'));
+
+      chart.draw(data, options);
+    }
+
+  </script>
     <style>
 		#menu {
 			background: #fff;
@@ -148,11 +254,16 @@ figcaption {
 		     <div class="container">
 		    <p><h2>History of the Young Lords</h2></p>
 
-<p class="lead">&nbsp; &nbsp; &nbsp;As a street gang occupying the Lincoln Park neighborhood of Chicago, The Young Lords provided what most gangs in the 1960&rsquo;s provided marginalized youth&mdash;protection, recognition, and a sense of autonomy despite disparate conditions. These conditions were exacerbated by the urban renewal programs championed by Mayor Richard Daly, which effectively redlined Lincoln Park for further development into a wealthy suburb and pushing out the majority Puerto Rican and Black populations further from the city center.</p>
+ <div class="container">
+                     <table class="columns">
+    <tr>
+  <div id="chart_1" style="width: 900px; height: 500px"></div>
+
+</tr>
+</table>
 <p class="lead">&nbsp; &nbsp; &nbsp;One YL member, Jos&eacute; &ldquo;Cha Cha&rdquo; Jim&eacute;nez, relied on the skills he learned from the YL gang in order to support his frequently relocated family. During one stint in jail for drug possession in 1968, Jim&eacute;nmez witnessed the frequent mistreatment of undocumented Mexican field workers at the behest of the police. He volunteered to be a translator for the monolingual police, and after reading the works of Thomas Merton OCSO, made the conscious effort to work toward bettering the lives of people like himself. Using the Black Panther Party as a template, Jim&eacute;nez re-envisioned the Young Lords, refocusing their efforts from turf wars to protecting the people they lived with. They took direct action to address the needs of the community. They truly embodied a revolutionary approach to community care and utilized all their rhetorical tools to bring about attention toward health equity in the Bronx.</p>
 <figure>
-		    <img style="display:block;margin:auto;" src="img/Young+Lords+Oranization.jpeg" alt="Headquarters" text-align:"center">
-<br>
+		     <div id="chart_2" style="width: 900px; height: 500px"></div>
 <figcaption style="style="font-family:Helvetica Neue" text-align: center>The first Young Lords Headquarters, Carlos Flores / Schomburg Center for Research in Black Culture / The New York Public Library</figcaption>
 
 </figure>
