--- a/index.html
+++ b/index.html
@@ -35,22 +35,28 @@
     google.charts.setOnLoadCallback(drawChart2);
     google.charts.setOnLoadCallback(drawChart3);
     google.charts.setOnLoadCallback(drawChart4);
+    google.charts.setOnLoadCallback(drawChart5);
+    google.charts.setOnLoadCallback(drawChart6);
+    google.charts.setOnLoadCallback(drawChart7);
+    google.charts.setOnLoadCallback(drawChart8);
+    google.charts.setOnLoadCallback(drawChart9);
+	  
     function drawChart1() {
-      var data = google.visualization.arrayToDataTable([
-        ['Year', 'Male', 'Female'],
-        ['2010',  14,      16.2],
-        ['2011',  13.6,      16.3],
-        ['2012',  13.6,       16.3],
-        ['2013',  13.2,      16.3],
-        ['2014',  13.4,      16.1],
-        ['2015',  12.2,      14.8],
-        ['2016', 11.3,      14],
-        ['2017', 11,      13.6],
-        ['2018', 10.6,      12.9]
-      ]);
+     var data = google.visualization.arrayToDataTable([
+['Year', '<100', '100-199', '200-399', '400-599', '600+'],
+['2010',	69.7, 67.6,	82.6,	82.6,	82.6],
+['2011',	71.6,	70,	83.5,	92.6,	96.8],
+['2012',	71.8,	70.7,	83.8,	93.5,	96.6],
+['2013',	72,	70.7,	83.9,	93.7,	96.7],
+['2014',	77,	76.6,	87.4,	94.9,	97.4],
+['2015',	81.8,	81.7,	88.9,	95.3,	97.9],
+['2016',	81.5,	82,	89.9,	95,	97.4],
+['2017',	82.1,	82,	88,	94.6,	97.4],
+['2018',	80.1,	81.4,	88.6,	94.4,	96.8]
+]);
 
       var options = {
-        title: 'Proportion of People Living in Poverty, by Sex',
+        title: 'Access to Health Services through Insurance, by Family income (percent poverty threshold)',
         curveType: 'function',
         legend: { position: 'bottom' }
       };
@@ -61,21 +67,21 @@
     }
 
     function drawChart2() {
-      var data = google.visualization.arrayToDataTable([
-        ['Year', 'Hispanic or Latinx', 'Mexican American', 'Black or African American, not Hispanic or Latinx', 'White, not Hispanic or Latinx'],
-        ['2010',  26.6,	28.6,	27.3,	9.9],
-        ['2011',  25.3,	27.1,	27.3,	9.8],
-        ['2012',  25.6,	26.7,	27,	9.7],
-        ['2013',  24.7,	25.8,	24.8,	10],
-        ['2014',  23.6,	25.1,	26.1,	10.1],
-        ['2015',  21.4,	22.4,	24.2,	9.1],
-        ['2016', 19.4,	20.3,	22.1,	8.8],
-        ['2017', 18.3,	18.6,	21,	8.7],
-        ['2018', 17.6,	18.5,	21.1,	8.1]
-      ]);
+         var data = google.visualization.arrayToDataTable([
+['year', 'Single', 'Single parent with children',	'Married couple or partners', 'Two parent family with children', 'Other'],
+['2010', 76.4,	87.3,	85.9,	88,	75.2],
+['2011', 77.6,	87.7,	85.5,	88.3,	77.4],
+['2012', 78.7,	88,	85.7,	88.3,	77.9],
+['2013', 79,	88,	86.6,	88.7,	77.8],
+['2014', 83.1,	90.4,	88.9,	90.3,	83.2],
+['2015', 86.6,	92.3,	91.3,	92.2,	86.4],
+['2016', 87.9,	91.4,	92,	92.2,	86.7],
+['2017', 87,	91.6,	91.5,	91.9,	86.6],
+['2018', 85.1,	91.2,	91.2,	91.9,	86.6]
+]);
 
       var options = {
-        title: 'Proportion of People Living in Poverty, by Race/Ethnicity',
+        title: 'Access to Health Services through Insurance, by Family type',
         curveType: 'function',
         legend: { position: 'bottom' }
       };
@@ -84,22 +90,23 @@
 
       chart.draw(data, options);
     }
-    function drawChart3() {
-      var data = google.visualization.arrayToDataTable([
-        ['Year', 'Male', 'Female'],
-        ['2010',  79.7,	83.9],
-        ['2011',  81.2,	84.4],
-        ['2012',  81.5,	84.6],
-        ['2013',  81.9,	84.8],
-        ['2014',  85.3,	88.1],
-        ['2015',  88,	90.7],
-        ['2016', 88.4,	91],
-        ['2017', 88.1,	90.5],
-        ['2018', 87.9,	90.1]
-      ]);
+
+function drawChart3() {
+     var data = google.visualization.arrayToDataTable([
+['Year', '<18 years',	'0-4 years', '5-11 years', '12-17 years', '18-44 years', '18-24 years', '25-44 years', '45-64 years', '45-54 years', '55-64 years'],
+['2010',	92.2,	93.8,	92.7,	90.2,	72.9,	68.6,	74.5,	84.3,	82.1,	87.2],
+['2011',	93,	95,	93.2,	91,	74.6,	74.1,	74.8,	84.6	82.6,	87],
+['2012',	93.4,	95.6,	93.7,	91.3,	75.2,	75.5,	75.1,	84.4,	82.3,	86.8],
+['2013',	93.4,	95.2,	94,	91.1,	75.8,	75.4,	75.9,	84.6,	82.9,	86.5],
+['2014',	94.6,	96.2,	94.8,	93.1,	80.3,	81.9,	79.8,	88.2,	86.3,	90.3],
+['2015',	95.5,	96.7,	96,	93.9,	84.1,	85.4,	83.6,	91,	89.8,	92.3],
+['2016',	94.8,	96.1,	95.1,	93.4,	85.2,	87,	84.6,	91.2,	89.4,	93],
+['2017',	95,	96.4	94.7,	94.2,	84.6,	86,	84.1,	90.7,	89.3,	92.1],
+['2018', 94.8,	96,	94.9,	93.7,	84.6,	85.7,	84.3,	89.8,	88,	91.5]
+]);
 
       var options = {
-        title: 'Access to Healthcare through Insurance, by Sex',
+        title: 'Access to Health Services through Insurance, by Age group',
         curveType: 'function',
         legend: { position: 'bottom' }
       };
@@ -108,22 +115,24 @@
 
       chart.draw(data, options);
     }
-          function drawChart4() {
-      var data = google.visualization.arrayToDataTable([
-       ['Year', 'American Indian or Alaska Native only', 'Asian only', 'Native Hawaiian or Other Pacific Islander only', 'Black or African American only', 'White only', '2 or more races', 'Hispanic or Latino', 'Not Hispanic or Latino', 'Black or African American only, not Hispanic or Latino', 'White only, not Hispanic or Latino'],
-       ['2010',	56,	    82.9,	75.6,	79.4,	82.4,	84.2,	68,	    84.8,	79.3,	86.3],			
-       ['2011',	65.8,	83.5,	77.3,	81,	    83.3,	84,	    68.9,	85.8,	81.2,	87.1],			
-       ['2012',	73,	    83.2,	87.9,	82,	    83.3,	85.5,	69.6,	86.1,	82.2,	87.3],			
-       ['2013',	70.6,	85.8,	89.3,	81.1,	83.7,	84.7,	69.3,	86.6,	81.2,	87.8],			
-       ['2014',	71.7,	89.2,	87.8,	86.3,	86.7,	89.9,	74.5,	89.5,	86.5,	90.3],			
-       ['2015',	78.6,	92.5,	87.4,	88.7,	89.3,	90.5,	78.9,	91.8,	88.8,	92.5],			
-       ['2016',	74.6,	93.5,	90.7,	88.5,	89.8,	91,	    80.4,	91.9,	88.7,	92.7],			
-       ['2017',	73.1,	92.6,	88.8,	88.8,	89.4,	89.6,	79.4,	91.8,	88.9,	92.6],			
-       ['2018',	71.4,	92.6,	90.6,	87.9,	89.1,	89.9,	79.9,	91.3,	87.9,	92.2]			
-      ]);
+
+function drawChart4() {
+     var data = google.visualization.arrayToDataTable([
+['Year', '<High school', 'High school', 'Some college', 'Associates degree', '4-year college degree', 'Advanced degree'],
+['2010',	54.4,	74.5,	79.4,	84,	90.6,	95.3],
+['2011',	57.5,	73.8,	79.5,	83.1,	91.1,	95.2],
+['2012',	56.3,	74.5,	79.8,	83.6,	90.6,	95],
+['2013',	56.7,	75.4,	80,	83.7,	90.3,	94.8],
+['2014', 64,	78.6,	83.8,	87.5,	93.3,	96.6],
+['2015', 68.1,	83.1,	88.3,	89.5,	95,	96.9],
+['2016',	68.7,	83.8,	89.1,	90.9,	94.7,	97],
+['2017',	67.3,	83.6,	87.1,	89.7,	94.6,	96.9],
+['2018',	67,	82.4,	87.6,	89.8,	94,	96.2]
+]);
+
 
       var options = {
-        title: 'Access to Healthcare through Insurance, by Race',
+        title: 'Access to Health Services through Insurance, by Educational attainment (25 years and over)',
         curveType: 'function',
         legend: { position: 'bottom' }
       };
@@ -132,6 +141,131 @@
 
       chart.draw(data, options);
     }
+
+function drawChart5() {
+     var data = google.visualization.arrayToDataTable([
+['Year', 'US', 'Outside US'],
+['2010',	85,	63],
+['2011',	86,	63.8],
+['2012',	86.3,	64.2],
+['2013',	86.5,	65.1],
+['2014',	89.5,	70.9],
+['2015',	91.7,	76.4],
+['2016',	91.9,	77.5],
+['2017',	91.5,	77.5],
+['2018',	91.1,	78.1]
+]);
+
+
+      var options = {
+        title: 'Access to Health Services through Insurance, by Country of birth',
+        curveType: 'function',
+        legend: { position: 'bottom' }
+      };
+
+      var chart = new google.visualization.LineChart(document.getElementById('chart_5'));
+
+      chart.draw(data, options);
+    }
+
+function drawChart6() {
+     var data = google.visualization.arrayToDataTable([
+['Year', 'People with disabilities', 'People without disabilities'],
+['2010',	86.1,	81.9],
+['2011',	85.1,	82.8],
+['2012',	85.8,	83.1],
+['2013',	84.1,	79.2],
+['2014',	85.1,	83.2],
+['2015',	89.3,	86.8],
+['2016',	88.6,	87.5],
+['2017',	88.4,	87.2]
+]);
+
+
+      var options = {
+        title: 'Access to Health Services through Insurance, by Disability status (18 years and over)',
+        curveType: 'function',
+        legend: { position: 'bottom' }
+      };
+
+      var chart = new google.visualization.LineChart(document.getElementById('chart_6'));
+
+      chart.draw(data, options);
+    }
+
+function drawChart7() {
+     var data = google.visualization.arrayToDataTable([
+['Year', 'Straight', 'Gay/Lesbian', 'Straight, Male', 'Straight, Female', 'Gay, Male', 'Bisexual', 'Gay/Lesbian, Female', 'Bisexual, Male', 'Bisexual, Female'],
+['2013',	80.4,	82.2,	78.3,	82.2,	82.2,	78.1,	82.2,	81.8,	76.4],
+['2014',	84.1,	81.8,	82.2,	85.8,	82.4,	83.9,	81.1,	77.6,	86.3],
+['2015',	87.6,	88.9,	85.8,	89.3,	88,	86.2,	90.1,	83.4,	87.3],
+['2016',	88.6,	92.3,	86.7,	90.3,	92.5,	89.2,	92,	90.5,	88.7],
+['2017',	87.9,	87.9,	86.5,	89.2,	91.3,	84.7,	83.5,	89.6,	82.9],
+['2018',	87.2,	88.7,	85.3,	88.9,	88.1,	85.9,	89.6,	80.9,	88.1]
+]);
+
+      var options = {
+        title: 'Access to Health Services through Insurance, by Sexual orientation',
+        curveType: 'function',
+        legend: { position: 'bottom' }
+      };
+
+      var chart = new google.visualization.LineChart(document.getElementById('chart_7'));
+
+      chart.draw(data, options);
+    }
+
+function drawChart8() {
+     var data = google.visualization.arrayToDataTable([
+['Year', 'Married', 'Cohabiting partner', 'Divorced or separated', 'Widowed', 'Never married'],
+['2010', 85.2,	69.7,	75.9,	81.4,	73.2],
+['2011', 85.7,	67.4,	76.6,	79.5,	75.4],
+['2012', 85.4,	67,	76.8,	81.8,	76.3],
+['2013', 85.6,	70.3,	77.4,	81.5,	76.5],
+['2014', 88.2,	72.4,	83.2,	84.2,	81.3],
+['2015', 91.1,	80.6,	85.9,	88.5,	84.9],
+['2016', 91.3,	83.7,	86.3,	89,	87.3],
+['2017', 90.7,	80.1,	86.7,	88.9,	86.3],
+['2018', 90.9,	83.1,	84.4,	87.4,	83.7]
+]);
+
+      var options = {
+        title: 'Access to Health Services through Insurance, by Marital status (18 years and over)',
+        curveType: 'function',
+        legend: { position: 'bottom' }
+      };
+
+      var chart = new google.visualization.LineChart(document.getElementById('chart_8'));
+
+      chart.draw(data, options);
+    }
+
+function drawChart9() {
+     var data = google.visualization.arrayToDataTable([
+['date', 'Metropolitan', 'Non-metropolitan'],
+['2010', 82.2,	79.6],
+['2011', 83.3,	80.2],
+['2012', 83.6,	80.1],
+['2013', 83.8, 80.7],
+['2014', 87, 84.8],
+['2015', 89.7,	87.2],
+['2016', 90.1,	86.7],
+['2017', 89.8,	86.2],
+['2018', 89.4,	86]
+]);
+
+      var options = {
+        title: 'Access to Health Services through Insurance, by Geographic location',
+        curveType: 'function',
+        legend: { position: 'bottom' }
+      };
+
+      var chart = new google.visualization.LineChart(document.getElementById('chart_9'));
+
+      chart.draw(data, options);
+    }
+
+
 
   </script>
     <style>
