--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>healthy Visuals</title>
+    <title>Healthy Visuals</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -44,15 +44,15 @@
     function drawChart1() {
      var data = google.visualization.arrayToDataTable([
 ['Year', '<100', '100-199', '200-399', '400-599', '600+'],
-['2010',	69.7, 67.6,	82.6,	82.6,	82.6],
-['2011',	71.6,	70,	83.5,	92.6,	96.8],
-['2012',	71.8,	70.7,	83.8,	93.5,	96.6],
-['2013',	72,	70.7,	83.9,	93.7,	96.7],
-['2014',	77,	76.6,	87.4,	94.9,	97.4],
-['2015',	81.8,	81.7,	88.9,	95.3,	97.9],
-['2016',	81.5,	82,	89.9,	95,	97.4],
-['2017',	82.1,	82,	88,	94.6,	97.4],
-['2018',	80.1,	81.4,	88.6,	94.4,	96.8]
+['2010', 69.7, 67.6,	82.6,	82.6,	82.6],
+['2011', 71.6, 70,	83.5,	92.6,	96.8],
+['2012', 71.8, 70.7,	83.8,	93.5,	96.6],
+['2013', 72, 70.7,	83.9,	93.7,	96.7],
+['2014', 77, 76.6,	87.4,	94.9,	97.4],
+['2015', 81.8, 81.7,	88.9,	95.3,	97.9],
+['2016', 81.5, 82,	89.9,	95,	97.4],
+['2017', 82.1, 82,	88,	94.6,	97.4],
+['2018', 80.1, 81.4,	88.6,	94.4,	96.8]
 ]);
 
       var options = {
