--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>healthy Visuals</title>
+    <title>Healthy Visuals</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -180,19 +180,14 @@ figcaption {
 	    <section class="page-section portfolio" id="portfolio">
             <div class="container">
 		     <div class="container">
-		    <p><h2>History of the Young Lords</h2></p>
+		    <p><h2>Visualizing Health</h2></p>
 
  <div class="container">
-                     <table class="columns">
-    <tr>
-  <div id="chart_1" style="width: 900px; height: 500px"></div>
 
-</tr>
-</table>
-<p class="lead">&nbsp; &nbsp; &nbsp;One YL member, Jos&eacute; &ldquo;Cha Cha&rdquo; Jim&eacute;nez, relied on the skills he learned from the YL gang in order to support his frequently relocated family. During one stint in jail for drug possession in 1968, Jim&eacute;nmez witnessed the frequent mistreatment of undocumented Mexican field workers at the behest of the police. He volunteered to be a translator for the monolingual police, and after reading the works of Thomas Merton OCSO, made the conscious effort to work toward bettering the lives of people like himself. Using the Black Panther Party as a template, Jim&eacute;nez re-envisioned the Young Lords, refocusing their efforts from turf wars to protecting the people they lived with. They took direct action to address the needs of the community. They truly embodied a revolutionary approach to community care and utilized all their rhetorical tools to bring about attention toward health equity in the Bronx.</p>
+<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed leo lacinia, rutrum enim a, auctor tortor. Suspendisse auctor nibh mauris, ut mattis ligula lacinia non. Nulla nisi lectus, feugiat a lectus ut, ultrices commodo justo. Ut enim eros, consequat in condimentum non, dapibus sed mauris. Morbi orci metus, blandit lobortis lacus commodo, porta vulputate mauris. In ultricies orci sapien, id pharetra lacus pellentesque sollicitudin. Nulla et massa elit. Sed semper nunc vitae magna bibendum viverra. Integer fringilla facilisis elit, in tempus orci vestibulum sed. Nullam in tempor sapien, ut tristique sem. Aenean id tincidunt odio. Cras consequat id nisl non facilisis. Phasellus ligula dolor, mollis ac tempor ut, pharetra in urna.</p>
 <figure>
-		     <div id="chart_2" style="width: 900px; height: 500px"></div>
-<figcaption style="style="font-family:Helvetica Neue" text-align: center>The first Young Lords Headquarters, Carlos Flores / Schomburg Center for Research in Black Culture / The New York Public Library</figcaption>
+		      <div id="chart_1" style="width: 900px; height: 500px"></div>
+<figcaption style="font-family:Helvetica Neue" text-align: center>Access to Health Services through Insurance, by Family income (percent poverty threshold)</figcaption>
 
 </figure>
 		    <br>
