--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Healthy Visuals</title>
+    <title>healthy Visuals</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -89,14 +89,14 @@
 function drawChart3() {
      var data = google.visualization.arrayToDataTable([
 ['Year', '<18 years',	'0-4 years', '5-11 years', '12-17 years', '18-44 years', '18-24 years', '25-44 years', '45-64 years', '45-54 years', '55-64 years'],
-['2010',	92.2,	93.8,	92.7,	90.2,	72.9,	68.6,	74.5,	84.3,	82.1,	87.2],
-['2011',	93,	95,	93.2,	91,	74.6,	74.1,	74.8,	84.6	82.6,	87],
-['2012',	93.4,	95.6,	93.7,	91.3,	75.2,	75.5,	75.1,	84.4,	82.3,	86.8],
-['2013',	93.4,	95.2,	94,	91.1,	75.8,	75.4,	75.9,	84.6,	82.9,	86.5],
-['2014',	94.6,	96.2,	94.8,	93.1,	80.3,	81.9,	79.8,	88.2,	86.3,	90.3],
-['2015',	95.5,	96.7,	96,	93.9,	84.1,	85.4,	83.6,	91,	89.8,	92.3],
-['2016',	94.8,	96.1,	95.1,	93.4,	85.2,	87,	84.6,	91.2,	89.4,	93],
-['2017',	95,	96.4	94.7,	94.2,	84.6,	86,	84.1,	90.7,	89.3,	92.1],
+['2010', 92.2,	93.8,	92.7,	90.2,	72.9,	68.6,	74.5,	84.3,	82.1,	87.2],
+['2011', 93, 95, 93.2,	91, 74.6, 74.1, 74.8, 84.6,	82.6,	87],
+['2012', 93.4,	95.6,	93.7,	91.3,	75.2,	75.5,	75.1,	84.4,	82.3,	86.8],
+['2013', 93.4,	95.2,	94,	91.1,	75.8,	75.4,	75.9,	84.6,	82.9,	86.5],
+['2014', 94.6,	96.2,	94.8,	93.1,	80.3,	81.9,	79.8,	88.2,	86.3,	90.3],
+['2015', 95.5,	96.7,	96,	93.9,	84.1,	85.4,	83.6,	91,	89.8,	92.3],
+['2016', 94.8,	96.1,	95.1,	93.4,	85.2,	87,	84.6,	91.2,	89.4,	93],
+['2017', 95,	96.4	94.7,	94.2,	84.6,	86,	84.1,	90.7,	89.3,	92.1],
 ['2018', 94.8,	96,	94.9,	93.7,	84.6,	85.7,	84.3,	89.8,	88,	91.5]
 ]);
 
