--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>healthy Visuals</title>
+    <title>Healthy Visuals</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -96,7 +96,7 @@ function drawChart3() {
 ['2014', 94.6,	96.2,	94.8,	93.1,	80.3,	81.9,	79.8,	88.2,	86.3,	90.3],
 ['2015', 95.5,	96.7,	96,	93.9,	84.1,	85.4,	83.6,	91,	89.8,	92.3],
 ['2016', 94.8,	96.1,	95.1,	93.4,	85.2,	87,	84.6,	91.2,	89.4,	93],
-['2017', 95,	96.4	94.7,	94.2,	84.6,	86,	84.1,	90.7,	89.3,	92.1],
+['2017', 95,	96.4,	94.7,	94.2,	84.6,	86,	84.1,	90.7,	89.3,	92.1],
 ['2018', 94.8,	96,	94.9,	93.7,	84.6,	85.7,	84.3,	89.8,	88,	91.5]
 ]);
 
