--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 	  google.charts.setOnLoadCallback(drawChart5);
 	  google.charts.setOnLoadCallback(drawChart6);
 	  google.charts.setOnLoadCallback(drawChart7);
+	  google.charts.setOnLoadCallback(drawChart8);
 
 	  
     function drawChart1() {
@@ -212,6 +213,30 @@ function drawChart3() {
       chart.draw(data, options);
     }
 
+	  function drawChart8() {
+     var data = google.visualization.arrayToDataTable([
+['Year', 'Married', 'Cohabiting partner', 'Divorced or separated', 'Widowed', 'Never married'],
+['2010', 85.2,	69.7,	75.9,	81.4,	73.2],
+['2011', 85.7,	67.4,	76.6,	79.5,	75.4],
+['2012', 85.4,	67,	76.8,	81.8,	76.3],
+['2013', 85.6,	70.3,	77.4,	81.5,	76.5],
+['2014', 88.2,	72.4,	83.2,	84.2,	81.3],
+['2015', 91.1,	80.6,	85.9,	88.5,	84.9],
+['2016', 91.3,	83.7,	86.3,	89,	87.3],
+['2017', 90.7,	80.1,	86.7,	88.9,	86.3],
+['2018', 90.9,	83.1,	84.4,	87.4,	83.7]
+]);
+
+      var options = {
+        title: 'Access to Health Services through Insurance, by Marital status (18 years and over)',
+        curveType: 'function',
+        legend: { position: 'bottom' }
+      };
+
+      var chart = new google.visualization.LineChart(document.getElementById('chart_8'));
+
+      chart.draw(data, options);
+    }
   </script>
     <style>
 		#menu {
@@ -406,7 +431,18 @@ figcaption {
 		      <div id="chart_7" style="width: 900px; height: 500px"></div>
 <figcaption style="font-family:Helvetica Neue" text-align: center>Access to Health Services through Insurance, by Family income (percent poverty threshold)</figcaption>
 
-</figure>	    
+</figure>
+	 		 	 	 <br>
+	 <p><h2>Visualizing Health</h2></p>
+
+ <div class="container">
+
+<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed leo lacinia, rutrum enim a, auctor tortor. Suspendisse auctor nibh mauris, ut mattis ligula lacinia non. Nulla nisi lectus, feugiat a lectus ut, ultrices commodo justo. Ut enim eros, consequat in condimentum non, dapibus sed mauris. Morbi orci metus, blandit lobortis lacus commodo, porta vulputate mauris. In ultricies orci sapien, id pharetra lacus pellentesque sollicitudin. Nulla et massa elit. Sed semper nunc vitae magna bibendum viverra. Integer fringilla facilisis elit, in tempus orci vestibulum sed. Nullam in tempor sapien, ut tristique sem. Aenean id tincidunt odio. Cras consequat id nisl non facilisis. Phasellus ligula dolor, mollis ac tempor ut, pharetra in urna.</p>
+<figure>
+		      <div id="chart_8" style="width: 900px; height: 500px"></div>
+<figcaption style="font-family:Helvetica Neue" text-align: center>Access to Health Services through Insurance, by Family income (percent poverty threshold)</figcaption>
+
+</figure>
 </div>               
 </div>
     </section>
