--- a/key.html
+++ b/key.html
@@ -11,7 +11,7 @@
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.css' rel='stylesheet' />
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   
-  <title>healthy Visuals</title>
+  <title>Healthy Visuals</title>
   
 <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
 <script src="https://api.mapbox.com/mapbox-gl-js/v1.7.0/mapbox-gl.js"></script>
@@ -138,7 +138,7 @@
 	    <section class="page-section portfolio" id="portfolio">
             <div class="container">
 <br>
-		    <div id='map' style="width: 1000px; height: 500px"></div>
+		    <div id='map' style="width: 1100px; height: 500px"></div>
 <script>
 mapboxgl.accessToken = 'pk.eyJ1Ijoicm9kcmk2OTEiLCJhIjoiY2szMGsyYTczMHRqbjNtczF0bDg2Zm83YSJ9.91pXtlBbZG8dWo9-hnz04w';
 var map = new mapboxgl.Map({
