--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>healthy Visuals</title>
+    <title>Healthy Visuals</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -395,11 +395,20 @@ figcaption {
 <p class="lead">To make Healthy People 2020 public-facing, the ODPHP created <a href=”https://health.gov/healthypeople”>Healthypeople.gov</a>, a website to present Healthy People 2020 initiatives and data-driven resources. Healthypeople.gov is a data- driven digital rhetoric project with a set of tools to access, customize, and use the extensive data collected by the initiative and its partner organizations. DATA2020 is the Healthy People 2020 interactive data tool housed on the Healthypeople.gov website. The stated goal of this project is to “allow users to explore data and technical information related to Healthy People 2020 objectives” (“How to Use DATA2020”).</p>
 <p class="lead">Figures 1 and 2 represent the user journey through the search, retrieval, and customization of data displays offered by the DATA2020 tool. Figure 1 is the starting point for the user to choose an objective and data sources from which to draw results. Figure 2 is a view from a search for the social determinants of health topic area. Figure 2 shows the number of potential items for customization in the display: the user can check boxes to see more information about the data, such as confidence intervals and standard error; view visualizations such as charts and graphs; view breakout data by more specific variables; and learn about methodology and download .csv files of raw data (Fig. 3).</p>
 <br>
+<figure>
 <img src="img/fig1.png" width="900" height="500">
+	<figcaption style="font-family:Helvetica Neue" text-align: center>Figure 1</figcaption>
+		    </figure>
 		    <br>
-<img src="img/fig2.png" width="900" height="500">
+		    <figure>
+<img src="img/fig2.png" width="900" height="600">
+			    <figcaption style="font-family:Helvetica Neue" text-align: center>Figure 2</figcaption>
+		    </figure>
 		    <br>
+		    <figure>
 <img src="img/fig3.png" width="900" height="500">
+			    <figcaption style="font-family:Helvetica Neue" text-align: center>Figure3</figcaption>
+		    </figure>
 <br>
 <p class="lead">The DATA2020 tool and its focus on interactivity and customization of data simultaneously makes accessible and obscure data collected in its database. The tool reflects what Katherine Hepworth described as “little acknowledgement of or reflection upon the seductive quality of data visualization” which “has dangerous implications for research quality, and the human subjects represented through research data visualizations” (2016, p. 7-8). The ability to customize and reduce complexity of social problems (as in Figure 2, employment of parents) to a fairly simple chart may be of use to a government official in need of specific data for a report, but it does not do the work of informing citizens to take action. In fact, as Hepworth argued, interactivity provides individual perspectives that “reduce complexity” (2016, p. 13), which may satisfy a specific user, but renders invisible greater insight into systems of oppression or an ability to “foster empathy” (2016, p. 19). The display in Figure 2 does not invite contemplation or reflection, but merely shows that the U.S. has improved its overall statistic from 71% to 74% of children with one full-time working parent, seeming to indicate slight improvement without context.</p>
 
